	* Removed the Quest turn limit
	* Player vampire gets a charisma bonus when wearing an opera cloak (by L)
	* Some monster vampires get an opera cloak (from Slash'Em)
	* Dump log: mark starting inventory items with a *
	* Automatically identify potions of sickness, hallucination, and speed
	  when inhaling their vapors.
	
	* New config option for customizing monster letter in UTF8graphics:
	  MONSTERSYMBOL='horse':U+0127 # latin small letter h with stroke

	* removed monsters:
	  - anti-matter vortex

	* Livelog: report bag of holding explosions

	* New role: Convict class

	* new monsters:
	  - locusts (from SporkHack)
	  - weeping angels
	  - deep orcs

	* dungeon layout:
	  - length of Town branch reduced and special filler level added
	  - new branch: The Ruins of Moria

	* Options:
	  - default of sortloot changed to 'loot'
	  - Allow exact numbers in STATUSCOLOR settings (from NAO)
	  - Permanent hallucination option: perma_hallu
	  - New option: wound_message. Healers can recieve Crawl-style damage
	    messages indicating the current health of their foes

	* Role differentiation:
	  - Tourists get automatic typ identification for shop items
	  - Healers can see how wounded monsters are (by L)

	* user interface improvements:
	  - HP notify, showing HP changes in the message area (from NAO)
	  - Menus made aware of the maximum count of an item (by heinrich5991)
	  - Message for some monster cancellation events
	  - When standing on Elbereth, show it in status lines

	* bug fixes:
	  - Fixed crash when player gets killed when entering a new level and
	    a trap on the previous level causes a null pointer dereference
	    when writing the HTML map (related to C343-20).
	  - Really reduce occurrences of hint daemon to once per game
	  - Fixed crash with ray beams at edges of maps
	  - Fixed missing item name with traditional menustyle
	  - Disabled chromatic dragon generation by monster summoning
	  - Fixed sporadic crash with hitpointbar when hp was below 0